Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,32 +26,43 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>
+<a name="%E5%85%B3%E4%BA%8E%E6%88%91" class="anchor" href="#%E5%85%B3%E4%BA%8E%E6%88%91"><span class="octicon octicon-link"></span></a>关于我</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Android@百度</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h3>
+<a name="%E7%83%AD%E9%97%A8%E5%BC%80%E6%BA%90%E9%A1%B9%E7%9B%AE" class="anchor" href="#%E7%83%AD%E9%97%A8%E5%BC%80%E6%BA%90%E9%A1%B9%E7%9B%AE"><span class="octicon octicon-link"></span></a>热门开源项目</h3>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p><a href="http://github.com/halzhang">我的 Github</a></p>
 
-<h3>Designer Templates</h3>
+<p><a href="http://halzhang.github.io/StartupNews/">StartupNews</a></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>
+<a name="%E6%96%87%E7%AB%A0" class="anchor" href="#%E6%96%87%E7%AB%A0"><span class="octicon octicon-link"></span></a>文章</h3>
 
-<h3>Rather Drive Stick?</h3>
+<p><a href="https://github.com/halzhang/halzhang.github.com/wiki/Gradle%E2%80%94Android%E9%A1%B9%E7%9B%AE%E6%9E%84%E5%BB%BA%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C">Gradle—Android项目构建使用手册</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>
+<a name="%E5%8D%9A%E5%AE%A2" class="anchor" href="#%E5%8D%9A%E5%AE%A2"><span class="octicon octicon-link"></span></a>博客</h3>
 
-<h3>Authors and Contributors</h3>
+<p><a href="http://halzhang.cnblogs.com/">我在博客园</a></p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3>
+<a name="app%E6%8E%A8%E8%8D%90" class="anchor" href="#app%E6%8E%A8%E8%8D%90"><span class="octicon octicon-link"></span></a>APP推荐</h3>
 
-<h3>Support or Contact</h3>
+<p><a href="http://play.google.com/store/apps/details?id=com.kugou.android">酷狗音乐</a></p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><a href="http://play.google.com/store/apps/details?id=com.baidu.BaiduMap">百度地图</a></p>
+
+<p><a href="http://play.google.com/store/apps/details?id=com.baidu.navi">百度导航</a></p>
+
+<p><a href="http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews">StartupNews</a></p>
+
+<h3>
+<a name="%E8%81%94%E7%B3%BB%E6%88%91" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%88%91"><span class="octicon octicon-link"></span></a>联系我</h3>
+
+<p><a href="http://www.weibo.com">我在微博</a></p>
       </section>
     </div>
 
