Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 <h3>
 <a name="app%E6%8E%A8%E8%8D%90" class="anchor" href="#app%E6%8E%A8%E8%8D%90"><span class="octicon octicon-link"></span></a>APP推荐</h3>
 
-<p><a href="http://play.google.com/store/apps/details?id=com.kugou.android">酷狗音乐</a></p>
+<p><a href="http://play.google.com/store/apps/details?id=com.kugou.android">酷狗音乐@Play</a></p>
 
-<p><a href="http://play.google.com/store/apps/details?id=com.baidu.BaiduMap">百度地图</a></p>
+<p><a href="http://play.google.com/store/apps/details?id=com.baidu.BaiduMap">百度地图@Play</a></p>
 
-<p><a href="http://play.google.com/store/apps/details?id=com.baidu.navi">百度导航</a></p>
+<p><a href="http://play.google.com/store/apps/details?id=com.baidu.navi">百度导航@Play</a></p>
 
-<p><a href="http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews">StartupNews</a></p>
+<p><a href="http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews">StartupNews@Play</a></p>
 
 <h3>
 <a name="%E8%81%94%E7%B3%BB%E6%88%91" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%88%91"><span class="octicon octicon-link"></span></a>联系我</h3>
