Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Halzhang.github.com : halzhang home project" />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Halzhang.github.com by halzhang</title>
+    <title>Halzhang.github.com</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Halzhang.github.com</h1>
-        <h2>halzhang home project</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/halzhang">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/halzhang" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Halzhang.github.com</h1>
+          <h2 id="project_tagline">halzhang home project</h2>
 
-    <div class="container">
-      <section id="main_content">
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="%E5%85%B3%E4%BA%8E%E6%88%91" class="anchor" href="#%E5%85%B3%E4%BA%8E%E6%88%91"><span class="octicon octicon-link"></span></a>关于我</h3>
 
@@ -51,16 +52,21 @@
 <h3>
 <a name="app%E6%8E%A8%E8%8D%90" class="anchor" href="#app%E6%8E%A8%E8%8D%90"><span class="octicon octicon-link"></span></a>APP推荐</h3>
 
-<p><a href="http://play.google.com/store/apps/details?id=com.kugou.android">酷狗音乐@Play</a></p>
-
-<p><a href="http://play.google.com/store/apps/details?id=com.baidu.BaiduMap">百度地图@Play</a></p>
-
-<p><a href="http://play.google.com/store/apps/details?id=com.baidu.navi">百度导航@Play</a></p>
-
-<p><a href="http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews">StartupNews@Play</a></p>
+<p><a href="http://play.google.com/store/apps/details?id=com.kugou.android">酷狗音乐@Play</a>
+<a href="http://play.google.com/store/apps/details?id=com.baidu.BaiduMap">百度地图@Play</a>
+<a href="http://play.google.com/store/apps/details?id=com.baidu.navi">百度导航@Play</a>
+<a href="http://play.google.com/store/apps/details?id=com.halzhang.android.apps.startupnews">StartupNews@Play</a></p>
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
